--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700;800&family=Noto+Sans+SC:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css?v=20260220-ui66" />
+    <link rel="stylesheet" href="./styles.css?v=20260220-ui71" />
   </head>
   <body>
     <div class="site-bg"></div>
@@ -43,7 +43,7 @@
             <p class="eyebrow">STEP 2 · INSTITUTION DETAIL</p>
             <h2 id="detailOrgTitle">--</h2>
             <p id="detailManagerLine" class="hero-desc">--</p>
-            <div id="detailLinks" class="detail-links"></div>
+            <div id="detailLinks" class="detail-links" hidden></div>
           </div>
           <div id="detailQuickStats" class="detail-stats"></div>
         </header>
@@ -78,6 +78,6 @@
       Data source: SEC EDGAR Form 13F filings.
     </footer>
 
-    <script src="./app.js?v=20260220-ui66"></script>
+    <script src="./app.js?v=20260220-ui71"></script>
   </body>
 </html>
